# koable

./: .cursorignore  .dockerignore  .env.example  .env.integrations.example  .gitattributes  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  NOTICE.md  README.md  SECURITY.md  app.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  railway.json  render.yaml  run-service.sh  start.sh  tsconfig.base.json  turbo.json  watchdog.sh
.devcontainer/: devcontainer.json  post-create.sh
.do/: app.yaml
.github/: pull_request_template.md
deployment/: README.md  reconfigure-domain.sh  server-setup.sh  switch-mode.sh
doable-cli/: Cargo.toml  README.md
doable-cli/src/: commands.rs  file_picker.rs  main.rs  mode_picker.rs  term.rs  tunnel.rs
doable-cli/src/admin/: app.rs  db.rs  mod.rs  server_config.rs  ui.rs
doable-cli/src/installer/: cli.rs  config.rs  events.rs  form.rs  mod.rs  phases.rs  runner.rs  tui.rs
docs/: LOCAL_DEV.md  PROVIDERS.md  QUICKSTART.md  SECRET_ROTATION.md
scripts/: cleanup-admin-ai-members.mjs  contract-admin-users.ts  contract-auth-refresh.ts  contract-billing-portal.ts  contract-chat-history.ts  contract-chat-modes.ts  contract-domains-list.ts  contract-health.ts  contract-marketplace-listings.ts  contract-notifications-list.ts  contract-project-detail.ts  contract-projects-list-pagination.ts  contract-workspaces-list.ts  dev-local.sh  rotate-secrets.sh  run-cleanup-admin-ai-members.sh  run-contract-tests.mjs  setup-build-proxy.sh  setup-local.sh  smoke-admin.mjs  verify-password-reset.ts
tools/: generate-env-template.ts  (+2 more)
(+1123 files in other folders)
